fixed issue where scrolling looked bad on safari

--- a/src/App.css
+++ b/src/App.css
@@ -29,6 +29,7 @@
   flex-direction: column;
   align-items: center;
   width: 100%;
+  flex-basis: auto;
 }
 .WelcomeWrapper {
   margin-top: 10vh;
